# dsa-digital-rust-api

./: .env.example  Cargo.toml  LICENSE  docker-compose.yml
configs/: postgresql.conf
src/: main.rs  messages.rs
src/database/postgres_connection/: mod.rs
src/database/postgres_connection/migrations/: 0001_init.sql
src/messages/: errors_messages.rs  info_messages.rs
src/services/users/: mod.rs  models.rs  services.rs  sql_commands.rs
src/services/users/services/: create_new_user.rs  get_all_users.rs  mod.rs  user_login.rs
