[package]
name = "dsa-digital-rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-files = "0.6.8"
futures-util = "0.3.31"
sanitize-filename = "0.6.0"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
env_logger = "0.11.8"
sqlx = { version = "0.8.6", features = ["runtime-async-std", "postgres", "chrono", "uuid"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
sha2 = "0.10.9"
hex = "0.4.3"
nanoid = "0.4"